--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,1 +1,20 @@
+name: test
 
+on:
+  push:
+    branches:
+    - main
+  pull_request:
+    branches:
+    - main
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@3.4.1
+      with:
+        node-version: '16.x'
+    - run: npm ci
+    - run: npm run test
