--- a/1-no-container/package.json
+++ b/1-no-container/package.json
@@ -4,6 +4,7 @@
     "koa-router": "^5.4.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "echo 'hello world'"
   }
 }
