--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,6 +12,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+    - run: cd 1-no-container
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v3.4.1
       with:
