--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,8 +11,11 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: 1-no-container
     steps:
-    - run: cd 1-no-container
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v3.4.1
       with:
